feat: update path to conform with what prind use

--- a/chopper_tune.cfg
+++ b/chopper_tune.cfg
@@ -35,7 +35,7 @@ gcode:
     _chop_workflow axis={axis} {rawparams}
 
 [gcode_shell_command chop_tune]
-command: ~/chopper-resonance-tuner/chopper_plot.sh
+command: /opt/klipper/klippy/extras/chopper_plot.sh
 timeout: 9999.0
 verbose: True
 
